# 
# 
# THIS MATERIAL IS PROVIDED AS IS, WITH ABSOLUTELY NO WARRANTY EXPRESSED
# OR IMPLIED.  ANY USE IS AT YOUR OWN RISK.
# 
# Permission is hereby granted to use or copy this program
# for any purpose,  provided the above notices are retained on all copies.
# Permission to modify the code and to distribute modified code is granted,
# provided the above notices are retained, and a notice that the code was
# modified is included with the above copyright notice.
#
# Modified by: Grzegorz Jakacki <jakacki at acm dot org>

## Process this file with automake to produce Makefile.in.

# installed headers
#
pkginclude_HEADERS = gc.h gc_typed.h gc_inl.h \
    gc_inline.h gc_mark.h gc_cpp.h \
    weakpointer.h gc_alloc.h new_gc_alloc.h \
    gc_allocator.h gc_backptr.h \
    gc_gcj.h gc_local_alloc.h leak_detector.h \
    gc_amiga_redirects.h gc_pthread_redirects.h \
    gc_config_macros.h

# headers which are not installed
#
dist_noinst_HEADERS = private/gc_hdrs.h \
    private/gc_priv.h private/gcconfig.h \
    private/gc_pmark.h private/gc_locks.h \
    private/solaris_threads.h private/dbg_mlc.h \
    private/specific.h private/cord_pos.h \
    private/pthread_support.h private/pthread_stop_world.h \
    private/darwin_semaphore.h private/darwin_stop_world.h \
    cord.h ec.h javaxfc.h 
